syntax = "proto3";

package getting.v1;

service Auth {
  rpc Signin(SigninRequest) returns (SigninResponse) {}
  rpc Signup(SignupRequest) returns (SignupResponse) {}
}

enum TokenType {
  TOKEN_TYPE_UNSPECIFIED = 0;
  TOKEN_TYPE_BEARER = 1;
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message SigninResponse {
  string access_token = 1;
  TokenType token_type = 2;
}

message SignupRequest {
  string email = 1;
  string password = 2;
}

message SignupResponse {
  int32 code = 1;
  optional string message = 2;
}
